--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -102,7 +102,10 @@ window#waybar {
     padding: 0 10px;
     border-radius: 16px;
     margin-right: 5px;
+
+    min-width: 150px;         /* Reserve space */
 }
+
 
 window#waybar.empty #window {
     background: transparent;
