--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -51,7 +51,8 @@ window#waybar {
 #custom-omarchy,
 #custom-screenrecording-indicator,
 #clock,
-#backlight{
+#backlight,
+#backlight-slider{
     background-color: @background;
     color: @foreground;
     padding: 0 10px;
@@ -77,13 +78,33 @@ window#waybar {
 
 /* --- Specific Module Styles & Overrides --- */
 
+#backlight-slider slider {
+    min-height: 0px;
+    min-width: 0px;
+    opacity: 0;
+    background-image: none;
+    border: none;
+    box-shadow: none;
+}
+#backlight-slider trough {
+    min-height: 10px;
+    min-width: 80px;
+    border-radius: 5px;
+    background-color: black;
+}
+#backlight-slider highlight {
+    min-width: 10px;
+    border-radius: 5px;
+    background-color: red;
+}
+
+
 #custom-screenrecording-indicator {
   border-radius: 16px;
   min-width: 12px;
   margin-left: 8.75px;
   font-size: 10px;
 
-  padding: 0 11 0 10;
 }
 
 #custom-screenrecording-indicator.active {
