fix tray menu background and color

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -13,6 +13,12 @@
 @define-color critical #e06c75;
 @define-color inactive #6a7a71;
 
+#tray menu{
+  background: @background;
+  color: @foreground;
+
+}
+
 * {
     background-color: transparent;
     border: none;
