modify waybar and wofi

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -249,7 +249,7 @@ mpd#waybar.empty #mpd {
 
 #battery.charging,
 #battery.plugged {
-    color: @accent;
+    color: @foreground;
 }
 
 @keyframes blink {
