--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -1,26 +1,24 @@
 window {
 margin: 0px;
-border: 1px solid #88c0d0;
-background-color: #2e3440;
+border: 1px solid #cba6f7;
+background-color: rgba(16, 16, 16, 0.75);
 }
 
 #input {
 margin: 5px;
 border: none;
-color: #d8dee9;
-background-color: #3b4252;
+color: #cba6f7;
+background-color:#3b4252;\
 }
 
 #inner-box {
 margin: 5px;
 border: none;
-background-color: #2e3440;
 }
 
 #outer-box {
 margin: 5px;
 border: none;
-background-color: #2e3440;
 }
 
 #scroll {
@@ -31,9 +29,9 @@ border: none;
 #text {
 margin: 5px;
 border: none;
-color: #d8dee9;
+color: #cba6f7;
 }
 
 #entry:selected {
-background-color: #3b4252;
+background-color: rgba(16,16,16,0.90);
 }
